<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">易摆</string>
    <string name="account_password_login">账号密码登录</string>
    <string name="login_with_mobile_phone_number_and_user_name">可使用的手机号、用户名登录</string>
    <string name="please_enter_your_mobile_number_or_username">请输入手机号/用户名</string>
    <string name="please_enter_your_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="sign_in_with_a_verification_code">使用验证码登入</string>
    <string name="other_ways_to_login">其他方式登录</string>
    <string name="mobile_phone_quick_login">手机快捷登录</string>
    <string name="unregistered_mobile_phone_number_will_automatically_create_an_account">未注册的手机号将自动创建账号</string>
    <string name="please_enter_your_mobile_number">请输入手机号</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="please_enter_verification_code">请输入验证码</string>
    <string name="use_account_password_login">使用账号密码登入</string>
    <string name="account_and_password_are_empty">账号与密码为空</string>
    <string name="account_are_empty">账号为空</string>
    <string name="password_are_empty">密码为空></string>
    <string name="phone_number_is_empty">手机号码为空</string>
    <string name="reacquire">重新获取</string>
    <string name="wechat_is_not_installed">未安装微信</string>
    <string name="binding_mobile_phone">绑定手机</string>
    <string name="this_wechat_has_not_been_registered_yet">此微信尚未注册,为了您账号不重复,请输入手机号验证,手机号已注册将直接绑定,如手机号未注册,将自动注册并绑定</string>
    <string name="slogan">绿植谈单神器助你轻松拿下绿植订单</string>
    <string name="home">首页</string>
    <string name="product">产品</string>
    <string name="quotation">报价</string>
    <string name="my">我的</string>
    <string name="take_a_photo">拍照</string>
    <string name="photo_album">相册</string>
    <string name="background_template">背景模版</string>
    <string name="company_profile">公司简介</string>
    <string name="case_share">案例分享</string>
    <string name="scenario_editor">场景编辑</string>
    <string name="start_design">开始设计</string>
    <string name="my_design">场景列表</string>
    <string name="quick_purchase">快速采购</string>
    <string name="picture_case">图片案例</string>
    <string name="hot_scheme">热门方案</string>
    <string name="recommend_product">推荐产品</string>
    <string name="nationwide">全国</string>
    <string name="whether_to_switch_to_national_supply">是否切换为全国货源</string>
    <string name="whether_to_switch_to_the_same_city_supply">是否切换为同城货源</string>
    <string name="switching_to_the_same_city_source_requires_positioning_service">切换为同城货源需要开启定位服务</string>
    <string name="edit">编辑</string>
    <string name="plant">植物</string>
    <string name="pot">盆器</string>
    <string name="filter">筛选</string>
    <string name="select_the_background_image_of_the_design">选择设计的背景图</string>
    <string name="select_scene">选择场景</string>
    <string name="select_scene_type">选择场景类型</string>
    <string name="please_enter_a_scene_name">请输入场景名称</string>
    <string name="you_need_to_select_at_least_one_design_view_to_start_designing">你至少需要选择一张设计背的景图,才可以开始设计(提示: 可以点击上方的相机或者相册图片来创建设计背的景图)</string>
    <string name="purchase">进货</string>
    <string name="day">日</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="total">合计:</string>
    <string name="generate_quotation">生成报价</string>
    <string name="type">类型:</string>
    <string name="day_rent">日租</string>
    <string name="month_rent">月租</string>
    <string name="year_rent">年租</string>
    <string name="buy">购买</string>
    <string name="tax_rate_colon">税率:</string>
    <string name="tax_exclusive">不含税</string>
    <string name="three_percent">3%</string>
    <string name="thirteen_percent">13%</string>
    <string name="enter_tax_rate">输入税率%</string>
    <string name="discounts">优惠:</string>
    <string name="enter_discount_amount">输入优惠金额</string>
    <string name="please_enter_the_authorization_code">请输入授权码</string>
    <string name="remember_the_authorization_code">记住授权码</string>
    <string name="modify_buy_price">修改购买价</string>
    <string name="modify_year_rent_price">修改年租价</string>
    <string name="modify_month_rent_price">修改月租价</string>
    <string name="modify_day_rent_price">修改日租价</string>
    <string name="enter_new_buy_price">输入新的购买价</string>
    <string name="enter_new_year_rent_price">输入新的年租价</string>
    <string name="enter_new_month_rent_price">输入新的月租价</string>
    <string name="enter_new_day_rent_price">输入新的日租价</string>
    <string name="no_products_have_been_added_yet">暂未添加任何产品&#8230;</string>
    <string name="look_at_the_product">看看产品</string>
    <string name="list">清单</string>
    <string name="save_quotation">保存报价</string>
    <string name="direct_clearing">直接结算</string>
    <string name="quotation_list_and_price">清单及价格</string>
    <string name="the_tax_rate_cannot_be_greater_than_one_hundred_percent">税率是不可以大于100%的</string>
    <string name="modify_successfully">修改成功</string>
    <string name="modify_unsuccessfully">修改失败</string>
    <string name="successfully_delete">删除成功</string>
    <string name="unsuccessfully_delete">删除失败</string>
    <string name="add_new_location">添加新位置</string>
    <string name="customer_preselection">客户预选</string>
    <string name="product_to_be_placed">待摆放产品</string>
    <string name="rename">改名</string>
    <string name="pot_">盆</string>
    <string name="you_need_to_create_an_added_location">你需要创建一个添加的位置(你可以点击列表选中"添加新位置"进行创建)</string>
    <string name="you_need_to_select_an_added_location">你需要选中一个添加的位置(你可以点击列表选中一个位置)</string>
    <string name="are_you_sure_to_delete">是否确定删除</string>
    <string name="modify_bonsai_number">修改盆栽数量</string>
    <string name="upgrade_now">立即升级</string>
    <string name="to_be_decided">待确定</string>
    <string name="to_follow_up">待跟进</string>
    <string name="deal_done">已成交</string>
    <string name="expired">已失效</string>
    <string name="all_quotation">所有报价</string>
    <string name="quotation_set">报价设置</string>
    <string name="customer_management">客户管理</string>
    <string name="purchase_order">已进货订单</string>
    <string name="all_orders">所有订单</string>
    <string name="pending_delivery">待配送</string>
    <string name="completed">已完成</string>
    <string name="balance">余额</string>
    <string name="company_data_edit">公司资料编辑</string>
    <string name="company_name">公司名称</string>
    <string name="company_logo">公司LOGO</string>
    <string name="home_page_display_pictures">主页展示图片</string>
    <string name="text_description">文字介绍</string>
    <string name="scene_preview">场景预览</string>
    <string name="my_scene">我的场景</string>
    <string name="background_image">背景图</string>
    <string name="recommended_match">推荐搭配</string>
    <string name="join_quotation">加入报价</string>
    <string name="save_photo">保存图片</string>
    <string name="save_design">保存设计</string>
    <string name="take_a_photo_replacement">拍照更换</string>
    <string name="album_replacement">相册更换</string>
    <string name="adjust_background">调整背景</string>
    <string name="brightness">亮度</string>
    <string name="contrast">对比度</string>
    <string name="replace_the_collocation">更换搭配</string>
    <string name="bonsai_info">盆栽信息</string>
    <string name="brightness_adjustment">光亮调整</string>
    <string name="intelligent_erase">智能擦除</string>
    <string name="restore_settings">还原设置</string>
    <string name="plant_info">植物信息</string>
    <string name="collocation_total_height">搭配总高度约:&#160;&#160;</string>
    <string name="serial_number_colon">编号:&#160;&#160;</string>
    <string name="height">高度:&#160;&#160;</string>
    <string name="total_height_is_expected">总高度预计为:&#160;&#160;</string>
    <string name="scene_list">场景列表</string>
    <string name="save_successfully_you_can_click_on_my_design_below_to_view">保存成功啦,可以点击下方的我的设计进行查看</string>
    <string name="save_failed">保存失败</string>
    <string name="all">全部</string>
    <string name="small">小型</string>
    <string name="middle">中型</string>
    <string name="large">大型</string>
    <string name="select_placement_spec">选择摆放规格</string>
    <string name="more">更多</string>
    <string name="recommend_plants">推荐植物</string>
    <string name="recommend_pot">推荐盆器</string>
    <string name="similar_products">同类产品</string>
    <string name="quotation_list">报价列表</string>
    <string name="quotation_details">报价详情</string>
    <string name="add_the_bonsai_in_this_scene_to_the_quotation">将本场景内摆放的盆栽添加到报价中</string>
    <string name="add_the_bonsai_in_this_scene_to_the_quotation_succeed">将本场景内摆放的盆栽添加到报价中成功</string>
    <string name="add_the_bonsai_in_this_scene_to_the_quotation_failure">将本场景内摆放的盆栽添加到报价中失败</string>
    <string name="modify_scene_name">修改场景名称</string>
    <string name="no_scenes_are_selected">没有选中任何场景</string>
    <string name="are_you_sure_to_delete_the_selected_scene">是否确定删除选中的场景?</string>
    <string name="accomplish">完成改款</string>
    <string name="select_class">选择分类</string>
    <string name="no_suitable_plants_recommended">没有适合推荐的植物</string>
    <string name="no_suitable_pot_recommended">没有适合推荐的盆器</string>
    <string name="no_suitable_style_for_recommended">没有适合推荐的款式</string>
    <string name="already_placed">已摆放</string>
    <string name="import_product_and_design_drawings_into_the_quotation_list">将产品及设计图导入报价清单</string>
    <string name="all_delete">全部删除</string>
    <string name="delete_customer_pre_selected_bonsai">是否删除客户预选的该盆栽</string>
    <string name="this_product_is_not_replaceable">此产品不可搭配</string>
    <string name="search">搜索</string>
    <string name="multiple_image_contrast">去对比</string>
    <string name="pot_comparison">盆器对比</string>
    <string name="plant_comparison">植物对比</string>
    <string name="change_batch">换一批</string>
    <string name="simulation_drawing">已模拟图</string>
    <string name="select_photo">选择图片</string>
    <string name="check_all">全选</string>
    <string name="none">全不选</string>
    <string name="already_selected">已选择</string>
    <string name="photo">张图片</string>
    <string name="reset">重置</string>
    <string name="use">已使用</string>
    <string name="unused">未使用</string>
    <string name="selected">已选</string>
    <string name="retail_price">零售价</string>
    <string name="month_rent_price">月租价</string>
    <string name="trade_price">进货价</string>
    <string name="similar_recommendation">相似推荐</string>
    <string name="look_design">查看设计</string>
    <string name="replace_collocation">更换搭配</string>
    <string name="join_photo_album">加入相册</string>
    <string name="join_purchase">加入进货</string>
    <string name="join_preselection">加入预选</string>
    <string name="collocation">搭配</string>
    <string name="change_style">进入改款</string>
    <string name="see_design">查看设计</string>
    <string name="open_background">开启背景</string>
    <string name="close_background">关闭背景</string>
    <string name="recommended_pot">推荐盆器</string>
    <string name="margin_setting">边距设置</string>
    <string name="filtrate">筛选</string>
    <string name="photograph_upload">拍照上传</string>
    <string name="choose_from_album">从相册中选择</string>
    <string name="save_quotation_by_customer">按客户保存报价</string>
    <string name="yibai_app">易摆APP</string>
    <string name="demo_design_quote_one_stop_trading_artifact">演示·设计·报价一站式交易神器</string>
    <string name="long_press_the_qr_code_to_save_the_phone">长按二维码保存至手机</string>
    <string name="monthly_rent_price_increase_ratio">月租价增幅比例</string>
    <string name="retail_price_increase_ratio">零售价增幅比例</string>
    <string name="please_enter_a_percentage_increase">请输入增幅百分比</string>
    <string name="update">更新</string>
    <string name="quotation_set_explanation">更新成功后,产品的基础价格都会按照设置的比例显示新的价格,计算公式为: 基础价格 * (1 + 增幅%)</string>
    <string name="pending_payment">待付款</string>
    <string name="pending_receipt">待收货</string>
    <string name="delete">删除</string>
    <string name="hint_message">提示消息</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="cancel">取消</string>
    <string name="percent_sign">%</string>
</resources>