<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="116dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/allOrdersLayout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@mipmap/right_gray"
            android:gravity="center_vertical"
            android:text="@string/purchase_order"
            android:textColor="@color/main_text_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            android:text="@string/all_orders"
            android:textColor="@color/prompt_low_text_color"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/pendingPaymentTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="4dp"
            android:drawableTop="@mipmap/my_order_decided"
            android:gravity="center"
            android:text="@string/pending_payment"
            android:textColor="@color/prompt_high_text_color"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pendingDeliveryTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="4dp"
            android:drawableTop="@mipmap/my_pending_delivery"
            android:gravity="center"
            android:text="@string/pending_delivery"
            android:textColor="@color/prompt_high_text_color"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pendingReceiptTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="4dp"
            android:drawableTop="@mipmap/my_order_deal_done"
            android:gravity="center"
            android:text="@string/pending_receipt"
            android:textColor="@color/prompt_high_text_color"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/completedTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="4dp"
            android:drawableTop="@mipmap/my_order_expired"
            android:gravity="center"
            android:text="@string/completed"
            android:textColor="@color/prompt_high_text_color"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
