<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_popup_window"
        android:orientation="vertical">

        <TextView
            android:id="@+id/takePhotosTextView"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/photograph_upload"
            android:textColor="@color/main_text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@color/line_color" />

        <TextView
            android:id="@+id/photoAlbumChooseTextView"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/choose_from_album"
            android:textColor="@color/main_text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/cancelTextView"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/main_text_color"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>
