<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/productsToBePlacedLayout"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@drawable/background_popup_windows"
    android:elevation="5dp"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="100dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@mipmap/down"
            android:gravity="center_vertical"
            android:onClick="onClick"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/customer_preselection"
            android:textColor="@color/main_text_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/allCheckTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/deleteTextView"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/check_all"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/deleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/cancelTextView"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/delete"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/cancelTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="36dp"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/stayPlacementRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
