<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/barView"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@null"
            android:padding="10dp"
            android:src="@mipmap/left" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/quotation_set"
            android:textColor="@color/main_text_color"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/monthly_rent_price_increase_ratio"
        android:textColor="@color/main_text_color"
        android:textSize="14sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="8dp">

        <com.ybw.yibai.common.widget.ClearEditText
            android:id="@+id/monthRentEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toStartOf="@+id/monthRentPercentTextView"
            android:background="@drawable/background_product_screening_text_unselected"
            android:hint="@string/please_enter_a_percentage_increase"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textColor="@color/main_text_color"
            android:textCursorDrawable="@drawable/edit_text_cursor_color"
            android:textSize="14sp"
            android:textStyle="bold"
            app:rightImage="@mipmap/edit_text_clear" />

        <TextView
            android:id="@+id/monthRentPercentTextView"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/percent_sign"
            android:textColor="@color/main_text_color"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/retail_price_increase_ratio"
        android:textColor="@color/main_text_color"
        android:textSize="14sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="8dp">

        <com.ybw.yibai.common.widget.ClearEditText
            android:id="@+id/retailPriceEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toStartOf="@+id/retailPricePercentTextView"
            android:background="@drawable/background_product_screening_text_unselected"
            android:hint="@string/please_enter_a_percentage_increase"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textColor="@color/main_text_color"
            android:textCursorDrawable="@drawable/edit_text_cursor_color"
            android:textSize="14sp"
            android:textStyle="bold"
            app:rightImage="@mipmap/edit_text_clear" />

        <TextView
            android:id="@+id/retailPricePercentTextView"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/percent_sign"
            android:textColor="@color/main_text_color"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <Button
        android:id="@+id/updateButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_button"
        android:text="@string/update"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/quotation_set_explanation"
        android:textColor="@color/prompt_low_text_color"
        android:textSize="12sp"
        android:textStyle="bold" />

</LinearLayout>