<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="248dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_custom_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/hint_message"
        android:textColor="@color/main_text_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/noButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/prompt_low_text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/line_color" />

        <Button
            android:id="@+id/yesButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/embellishment_text_color"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
